Default hide Side Pane

--- a/README
+++ b/README
@@ -6,5 +6,11 @@ This is a modified version of PCManFM 1.4.0, altered to create a mini desktop wi
 PCManFM patch for hiding menubar toggle (GTK2 version), accessed via 'View' menu or pressing Ctrl+m
 https://gist.github.com/M4he/3a8171a7f39d9ba9a0cf6bb387b08061
 
-Compile the program with configure option --sysconfdir=/etc
+# Setting hide as default setting
+https://github.com/lxde/pcmanfm/issues/22
+
+Side Pane
+Toolbar
+
+
 
