Default hide Tool bar, Status and Menubar

--- a/README
+++ b/README
@@ -9,8 +9,10 @@ https://gist.github.com/M4he/3a8171a7f39d9ba9a0cf6bb387b08061
 # Setting hide as default setting
 https://github.com/lxde/pcmanfm/issues/22
 
-Side Pane
+Side Pane (F9)
 Toolbar
+Statusbar (Ctrl+b)
+Menubar (Ctrl+m)
 
 
 
